...
      <Button
        title="Go to Albums"
        onPress={() => {
          jumpTo?.('albums');
        }}
      />
      <Heading>What is Lorem Ipsum?</Heading>
      <Paragraph>
        Lorem Ipsum is simply dummy text of the printing and typesetting
        industry. Lorem Ipsum has been the industry&apos;s standard dummy text
        ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining
...
