appId: ${APP_ID}
name: Navigate tabs via testIDs
---
- launchApp
- scrollUntilVisible:
    element:
      text: ^Native Bottom Tabs$
    direction: DOWN
    timeout: 15000
- tapOn:
    text: ^Native Bottom Tabs$
- assertVisible: Press me
- tapOn:
    id: articleTestID
- assertVisible: What is Lorem Ipsum?
- tapOn:
    id: albumsTestID
- tapOn:
    id: chatTestID
- assertVisible: Press me
